[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Voxel-Core/controls/VoxelSetViewer/VoxelSetViewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Voxel-Core/controls/VoxelViewer/VoxelViewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Voxel-Core/engine/Editors/VoxelSet/VoxelSet.gd" type="Script" id=3]

[node name="VoxelSet" type="ScrollContainer"]
anchor_right = 1.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 200 )
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
margin_right = 338.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/GridContainer"]
margin_right = 55.0
margin_bottom = 14.0
text = "VoxelSet"

[node name="Label4" type="Label" parent="HBoxContainer/GridContainer"]
margin_left = 59.0
margin_right = 66.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="HBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 55.0
margin_bottom = 32.0
text = "Voxels"

[node name="Label3" type="Label" parent="HBoxContainer/GridContainer"]
margin_left = 59.0
margin_top = 18.0
margin_right = 66.0
margin_bottom = 32.0
text = "x"

[node name="VoxelSetViewer" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_right = 680.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VoxelViewer" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
EditMode = true
